--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,7 @@ a > .leftHeader {
 width: 90vw;
 height: auto;
 margin-top: 1vh;
-margin-bottom: 4vh;
+margin-bottom: 2vh;
 margin-left: auto;
 margin-right: auto;
 border: 0.25vh solid hsl(0, 100%, 31%);
@@ -171,14 +171,17 @@ a {
 
 a > .gameBox1 {
     height: auto;
-    width: 100%;
+    width: auto;
     display: inline-block;
-    margin-bottom: 4vh;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+    margin-left: 2vw;
+    margin-right: 2vw;
 }
 
 a > .gameBox1 >img {
     height: 25vh;
-    width: 100%;
+    width: auto;
     margin: auto;
     border-radius: 25%;
     display: block;
@@ -189,7 +192,10 @@ a > .gameBox2 {
     width: auto;
     margin: auto;
     display: inline-block;
-    margin-right: 4vw;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+    margin-left: 2vw;
+    margin-right: 2vw;
 }
 
 a > .gameBox2 >img {
@@ -202,16 +208,23 @@ a > .gameBox2 >img {
 
 .gameBox2Small {
     height: 25vh;
-    width: 140px;
+    width: auto;
     margin: auto;
     display: inline-block;
+    margin-top: 4vh;
+    margin-bottom: 2vh;
+    margin-left: 2vw;
+    margin-right: 2vw;
 }
 
 .gameBox3Block {
-    height: auto;
-    width: 100%;
+    height: 25vh;
+    width: auto;
     display: inline-block;
-    margin-bottom: 4vh;
+    margin-top: 4vh;
+    margin-bottom: 2vh;
+    margin-left: 2vw;
+    margin-right: 2vw;
 }
 
 a > .gameBox3 {
@@ -264,16 +277,19 @@ a > .gameBox4 >img {
 
 a > .gameBox {
     height: 12.5vh;
-    width: 100%;
-    display: inline-block;
+    width: 50%;
     margin: auto;
-    text-align: center;
+    display: inline-block;
+    margin-top: 2vh;
     margin-bottom: 2vh;
+    margin-left: 2vw;
+    margin-right: 2vw;
+    
 }
 
 a > .gameBox >img {
     height: 10.5vh;
-    width: 100%;
+    width: auto;
     margin: auto;
     border-radius: 5%;
     display: block;
@@ -620,19 +636,27 @@ font-size: 50px;
     height: auto;
     text-align: center;
     display: inline-block;
+    margin-top: 4vh;
+    margin-bottom: 2vh;
+    margin-left: 2vw;
+    margin-right: 2vw;
 
   }
 
   .bet-box1 form a {
     position: relative;
     display: inline-block;
-    padding: 10px;
     color: white;
     font-size: 20px;
     text-decoration: none;
     overflow: hidden;
     transition: .5s; 
     text-align: center;
+    margin-top: 4vh;
+    margin-bottom: 2vh;
+    margin-left: 2vw;
+    margin-right: 2vw;
+    padding: 10px 10px 10px 10px;
 }
   
     
