--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,45 @@ body {
     width: 100vw;
 }
 
+/*new layout*/
+
+.g1 {
+    width: 45%;
+    height: 25vh;
+    border:  solid 2px black; 
+    display: inline-block;
+    margin: auto; 
+    padding: 0;
+}
+
+.g2 {
+    width: 100%;
+    height: 12.3vh;
+    border:  solid 2px black; 
+    display: inline-block;  
+    margin: auto; 
+    padding: 0;
+}
+
+.g3 {
+    width: 45%;
+    height: 25vh;
+    border:  solid 2px black; 
+    display: inline-block;
+    margin: auto; 
+    padding: 0;
+}
+
+.g1 img {
+    height: 100%;
+    width: 100%;
+  }
+
+.g2 img {
+    height: 100%;
+    width: 100%;
+  }
+
 /* Header */
 
  .header {
