--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,20 +20,27 @@ body {
 }
 
 .g2 {
-    width: 100%;
-    height: 12.3vh;
+    width: 88%;
+    height: 10vh;
     border:  solid 2px black; 
     display: inline-block;  
-    margin: auto; 
+    margin: 20px; 
     padding: 0;
 }
 
 .g3 {
     width: 45%;
-    height: 25vh;
-    border:  solid 2px black; 
+    height: 25vh; 
     display: inline-block;
     margin: auto; 
+    padding: 0;
+}
+
+.g4 {
+    width: 44%;
+    height: 10vh;
+    border:  solid 2px black; 
+    display: inline-block;  
     padding: 0;
 }
 
@@ -43,6 +50,11 @@ body {
   }
 
 .g2 img {
+    height: 100%;
+    width: 100%;
+  }
+
+.g4 img {
     height: 100%;
     width: 100%;
   }
