--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,7 @@ body {
     margin: auto; 
     margin-bottom: 25px;
     padding: 0;
+    max-width: 400px;
 }
 
 .g2 {
@@ -27,6 +28,7 @@ body {
     display: inline-block;  
     margin: 1vw 1vh 1vw 1vh;     
     padding: 0;
+    max-width: 250px;
 }
 
 .g4 {
@@ -36,11 +38,13 @@ body {
     display: inline-block;  
     margin: auto;     
     padding: 0;
+    max-width: 125px;
 }
 
 .g1 img {
     height: 100%;
     width: 100%;
+    max-width: 450px;
   }
 
 .g2 img {
@@ -96,7 +100,7 @@ a > .leftHeader {
 }
 
 .adBannerHome {
-width: 100vw;
+width: 95vw;
 height: auto;
 margin-top: 1vh;
 margin-bottom: 2vh;
@@ -222,6 +226,7 @@ a > .gameBox1 {
     margin-bottom: 2vh;
     margin-left: 2vw;
     margin-right: 2vw;
+    max-width: 500px;
 }
 
 a > .gameBox1 >img {
