--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,7 @@ body {
     margin-bottom: 25px;
     padding: 0;
     max-width: 400px;
+    max-height: 200px;
 }
 
 .g2 {
@@ -116,7 +117,8 @@ margin-top: 1vh;
 margin-bottom: 2vh;
 margin-left: auto;
 margin-right: auto;
-border: 0.25vh solid hsl(0, 100%, 31%);
+border: 0.25vh solid grey;
+max-width: 600px;
 }
 
 /*Game Area*/
