--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ body {
 .g1 {
     width: 40vw;
     height: 15vh;
-    border:  solid 2px white; 
+    border:  solid 2px hsl(0, 100%, 31%); 
     display: inline-block; 
     margin: 5vh 2vw 5vh 2vw; 
     padding: 0;
@@ -25,7 +25,7 @@ body {
 .g2 {
     width: 40vw;
     height: 15vh;
-    border:  solid 2px white;  
+    border:  solid 2px hsl(0, 100%, 31%);  
     display: inline-block;  
     margin: 5vh 2vw 5vh 2vw;      
     padding: 0;
@@ -408,15 +408,13 @@ a:visited {
   }
   
   .anybetHeading {
-    font-size: 40px;
+    font-size: 42px;
     font-family: sans-serif;
     text-shadow: 4px 4px 0px hsl(0, 100%, 31%);
     mix-blend-mode: screen;
     animation: fadeIn 5s linear alternate infinite;
     color: black;
     text-align: center;
-    top: 50%; 
-    left: 50%;
     font-size-adjust: 0.5;
   }
   
