--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,27 +11,29 @@ body {
 /*new layout*/
 
 .g1 {
-    width: 80vw;
-    height: 70vh;
-    display: inline-block; 
-    margin: 5vh 2vw 5vh 2vw; 
-    padding: 0;
-    max-width: 300px;
-    max-height: 350px;
-    border-radius: 2.5%;
-    min-width: 150px;
-}
-
-.g2 {
-    width: 40vw;
-    height: 15vh;
+    width: 30vw;
+    height: auto;
     display: inline-block;  
-    margin: 5vh 2vw 5vh 2vw;      
+    margin: 5vh 5vw 5vh 5vw;      
     padding: 0;
     max-width: 250px;
     max-height: 200px;
     border-radius: 2.5%;
-    min-width: 150px;
+    min-width: 100px;
+    min-height: 25px;
+}
+
+.g2 {
+    width: 30vw;
+    height: auto;
+    display: inline-block;  
+    margin: 5vh 5vw 5vh 5vw;      
+    padding: 0;
+    max-width: 250px;
+    max-height: 200px;
+    border-radius: 2.5%;
+    min-width: 100px;
+    min-height: 25px;
 }
 
 
@@ -67,7 +69,7 @@ body {
     color: white;
     font-size: 24px;
     border-top: 0.25vh solid white;
-    padding-top: 5vh;
+    padding-top: 1vh;
 }
 
 /* Header */
@@ -409,17 +411,33 @@ a:visited {
     width: 300px;
     margin: 10px 10px 10px 10px;
   }
+
+  .anybetBox {
+    width: 80vw;
+    height: auto;
+    border: solid 3px hsl(0, 100%, 31%); 
+    border-radius: 2.5%;    
+    text-align: center;
+    display: inline-block;
+    container-type: inline-size;
+    max-width: 480px;
+    max-height: 240px;
+    margin: 5vh 5vw 5vh 5vw; 
+  }
+  
   
   .anybetHeading {
-    font-size: 42px;
+    font-size: 20cqw;
     font-family: sans-serif;
     text-shadow: 4px 4px 0px hsl(0, 100%, 31%);
     mix-blend-mode: screen;
     animation: fadeIn 5s linear alternate infinite;
     color: black;
-    text-align: center;
-    font-size-adjust: auto;
+    position: relative;   
+    margin: auto;
   }
+
+
   
   @keyframes fadeIn {
           
