--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@ body {
     margin: 5vh 5vw 5vh 5vw;      
     padding: 0;
     max-width: 250px;
-    max-height: 30vh;
+    max-height: 50px;
     border-radius: 2.5%;
     min-width: 100px;
     min-height: 25px;
@@ -30,7 +30,7 @@ body {
     margin: 5vh 5vw 5vh 5vw;      
     padding: 0;
     max-width: 250px;
-    max-height: 30vh;
+    max-height: 50px;
     border-radius: 2.5%;
     min-width: 100px;
     min-height: 25px;
