--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,13 +46,13 @@ body {
 }
 
 .g1 img {
-    height: auto;
-    width: 30vw;
+    height: 100%;
+    width: 100%;
   }
 
 .g2 img {
-    height: auto;
-    width: 30vw;
+    height: 100%;
+    width: 100%;
   }
 
 
