--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ body {
     margin: 5vh 5vw 5vh 5vw;      
     padding: 0;
     max-width: 250px;
-    max-height: 20px;
+    max-height: 20vh;
     border-radius: 2.5%;
     min-width: 100px;
     min-height: 25px;
