--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@ body {
 
 .g1 {
     width: 25vw;
+    height: 20vh;
     display: inline-block;  
     margin: 5vh 2.5vw 5vh 2.5vw;      
     padding: 0;
@@ -20,10 +21,24 @@ body {
     border-radius: 2.5%;
     min-width: 100px;
     min-height: 25px;
+    border: solid 3px hsl(0, 100%, 31%); 
+    box-shadow: 0 0 5px hsl(0, 100%, 31%),
+                0 0 25px hsl(0, 100%, 31%),
+                0 0 50px hsl(0, 100%, 31%),
+                0 0 100px hsl(0, 100%, 31%);
 }
+
+.g1:hover {
+    border-radius: 5px;
+    box-shadow: 0 0 5px white,
+                0 0 25px white,
+                0 0 50px white,
+                0 0 100px white;
+  }
 
 .g2 {
     width: 25vw;
+    height: 20vh;
     display: inline-block;  
     margin: 5vh 2.5vw 5vh 2.5vw;      
     padding: 0;
@@ -32,7 +47,20 @@ body {
     border-radius: 2.5%;
     min-width: 100px;
     min-height: 25px;
+    border: solid 3px hsl(0, 100%, 31%); 
+    box-shadow: 0 0 5px hsl(0, 100%, 31%),
+                0 0 25px hsl(0, 100%, 31%),
+                0 0 50px hsl(0, 100%, 31%),
+                0 0 100px hsl(0, 100%, 31%);
 }
+
+.g2:hover {
+    border-radius: 5px;
+    box-shadow: 0 0 5px white,
+                0 0 25px white,
+                0 0 50px white,
+                0 0 100px white;
+  }
 
 
 .g4 {
@@ -408,6 +436,7 @@ a:visited {
     height: 80px;
     width: 300px;
     margin: 10px 10px 10px 10px;
+    
   }
 
   .anybetBox {
@@ -421,6 +450,18 @@ a:visited {
     max-width: 480px;
     max-height: 240px;
     margin: 5vh 5vw 5vh 5vw; 
+    box-shadow: 0 0 5px hsl(0, 100%, 31%),
+                0 0 25px hsl(0, 100%, 31%),
+                0 0 50px hsl(0, 100%, 31%),
+                0 0 100px hsl(0, 100%, 31%);
+  }
+
+  .anybetBox:hover {
+    border-radius: 5px;
+    box-shadow: 0 0 5px white,
+                0 0 25px white,
+                0 0 50px white,
+                0 0 100px white;
   }
   
   
