--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,7 @@ body {
     min-width: 100px;
     min-height: 25px;
     border: solid 3px hsl(0, 100%, 31%); 
+    border-radius: 5%;
     box-shadow: 0 0 5px hsl(0, 100%, 31%),
                 0 0 25px hsl(0, 100%, 31%),
                 0 0 50px hsl(0, 100%, 31%),
@@ -30,6 +31,7 @@ body {
 
 .g1:hover {
     border: solid 3px green; 
+    border-radius: 5%;
     box-shadow: 0 0 5px green,
                 0 0 25px green,
                 0 0 50px green,
@@ -48,6 +50,7 @@ body {
     min-width: 100px;
     min-height: 25px;
     border: solid 3px hsl(0, 100%, 31%); 
+    border-radius: 5%;
     box-shadow: 0 0 5px hsl(0, 100%, 31%),
                 0 0 25px hsl(0, 100%, 31%),
                 0 0 50px hsl(0, 100%, 31%),
@@ -56,6 +59,7 @@ body {
 
 .g2:hover {
     border: solid 3px green; 
+    border-radius: 5%;
     box-shadow: 0 0 5px green,
                 0 0 25px green,
                 0 0 50px green,
@@ -119,7 +123,7 @@ body {
 }
 
 .leftHeader {
-    width: 45vw;
+    width: 55vw;
     text-align: left;
     font-size: 20px;
     display: inline-block;
@@ -132,7 +136,7 @@ a > .leftHeader {
 
 
 .rightHeader {
-    width: 45vw;
+    width: 35vw;
     text-align: right;
     color:white;
     font-family: sans-serif;
